Организация запуска через единую jar