@@ -13,15 +13,12 @@ import java.nio.file.Paths;
 
 @Configuration
 public class JteConfiguration {
-
     @Bean
     public ViewResolver jteViewResolve(TemplateEngine templateEngine) {
         return new JteViewResolver(templateEngine);
     }
-
     @Bean
     public TemplateEngine templateEngine() {
-
         String profile = System.getenv("SPRING_ENV");
         if ("prod".equals(profile)) {
             // Templates will be compiled by the maven build task
@@ -29,8 +26,9 @@ public class JteConfiguration {
         } else {
             // Here, a JTE file watcher will recompile the JTE templates upon file save (the web browser will auto-refresh)
             // If using IntelliJ, use Ctrl-F9 to trigger an auto-refresh when editing non-JTE files.
-            CodeResolver codeResolver = new DirectoryCodeResolver(Path.of("jte" ,"src", "main", "jte"));
-            TemplateEngine templateEngine = TemplateEngine.create(codeResolver, Paths.get("jte-classes"), ContentType.Html, getClass().getClassLoader());
+            CodeResolver codeResolver = new DirectoryCodeResolver(Path.of("web" ,"src", "main", "resources", "jte"));
+            //TemplateEngine templateEngine = TemplateEngine.create(codeResolver, Paths.get("jte-classes"), ContentType.Html, getClass().getClassLoader());
+            TemplateEngine templateEngine = TemplateEngine.create(codeResolver, Paths.get(Paths.get("").toAbsolutePath().toString()+"/web/target/jte-classes"), ContentType.Html, getClass().getClassLoader());
             templateEngine.setBinaryStaticContent(true);
             return templateEngine;
         }
